--- a/1.html
+++ b/1.html
@@ -19,6 +19,12 @@
         <li><a href = "3.html">JavaScript</a></li>
     </ol>
 
+    <!-- 동영상을 삽입하고 싶을 때  유튜브 - 공유 - 퍼가기 - 소스코드 복사 후 아래에 붙이기 -->
+    <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ouhBPmoRiSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </p>
+
     <!-- 제목의 크기. 크기를 크게하고 강조한다. <h1></h1> 부터 <h6></h6> 까지 있다. -->
     <h2>HTML 이란 무엇인가?</h2>
 
@@ -46,6 +52,33 @@
     semantics for text such as headings, paragraphs, lists, links, quotes
     and other items. HTML elements are delineated by tags, written
     using angle brackets.
+    </p>
+
+    <!-- 웹사이트에 댓글 기능 추가
+         DISQUS 웹사이트에서 (https://disqus.com/admin/create/)
+         Website Name 을 새로 지정해서 만들면 된다. 그리고 만들고 나서 제일 아래에
+         Universal Code로 설정하고 1. Place the following code where you'd like Disqus to load 에 있는 코드를 복사해서 제일 아래에 삽입하면 된다. -->
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-7xgh71lvq7.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
 </body>
 </html>
